pkg/provider/kubernetes/ingress-nginx/fixtures/ingresses/ingress-with-enable-access-log.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-with-enable-access-log
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/enable-access-log: "true"

spec:
  ingressClassName: nginx
  rules:
    - host: accesslog.localhost
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: whoami
                port:
                  number: 80
